[project]
name = "dailyphoto"
version = "0.1.0"
description = "Tool to create https://daily.photo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ['Pillow', 'pydantic']

[project.scripts]
dailyphoto = "dailyphoto:cli.main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "watchdog",
]

[tool.ruff]
line-length = 120
