[project]
name = "dailyphoto"
version = "0.1.0"
description = "Tool to create https://daily.photo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jinja2",
  "Pillow",
  "pydantic",
]

[project.scripts]
dailyphoto = "dailyphoto:cli.main"

[tool.uv]
package = true

[tool.setuptools.package-data]
"dailyphoto" = ["resources/*", ]

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "watchdog",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
# pycodestyle
  "E",
# Pyflakes
  "F",
# pyupgrade
  "UP",
# flake8-bugbear
  "B",
# flake8-logging
  "LOG",
# flake8-simplify
  "SIM",
# flake8-unused-arguments
  "ARG",
# isort
  "I",
]
ignore = [
# if-else-block-instead-of-if-exp, I prefer if-else
  "SIM108",
]

[tool.ruff.lint.isort]
force-single-line = true
